# eumetsearch

./: .gitignore  LICENSE.txt  README.md  diff.patch  main.py  pyproject.toml
src/: definitions.py
src/data_collection/: __init__.py
src/eumdown/: __init__.py
src/eumdown/utils/: __init__.py  areas.yaml  general.py  zarr.py
src/eumetsearch/: __init__.py
src/eumetsearch/data_collection/: __init__.py  downloader.py  majortom_export.py  phidown_data.py  pipeline_data.py
src/eumetsearch/transform/: __init__.py  majortom_fci.py
src/eumetsearch/utils/: bbox.py  general.py  zarr.py
src/utils/: __init__.py  bbox.py  downloader.py  general.py  zarr.py
tests/: export_area.py  test_downloader.py  test_majortom_fci.py  test_zarr.py
