[project]
name = "eumetsearch"
version = "0.1.0"
description = "Package to download and reproject to regular grid data from MTG/MSG FCI"
authors = [
  { name = "Riccardo D’Ercole" }
]
readme = "README.md"
requires-python =">=3.11"

dependencies = [
    "xarray>=2025.7.1,<2026.0.0",
    "eumdac>=3.0.0,<4.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "tqdm>=4.67.1",
    "netcdf4>=1.7.2",
    "dask>=2025.7.0",
    "matplotlib>=3.10.3",
    "pyresample>=1.34.2",
    "pydantic>=2.11.7",
    "satpy>=0.57.0",
    "zarr==2.18.7",
    "ipykernel>=6.30.0",
    "h5netcdf>=1.6.3",
    "pyproj (>=3.7.2,<4.0.0)",
    "memory-profiler>=0.61.0",
    "minio>=7.2.18",
    "s3fs>=2025.9.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.1",
    "rioxarray>=0.19.0",
    "phidown>=0.1.22",
    "folium>=0.20.0",
    "pystac>=1.14.1",
    "pystac-client>=0.9.0",
    "filelock>=3.20.0",
    "pydwca>=0.5.1",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
]

